Finalizando gráfico quadrante

--- a/Edicao/Linear/style.css
+++ b/Edicao/Linear/style.css
@@ -45,5 +45,5 @@
     margin-right: -10px;
     font-size: 9px;
     color: #666666;
-    font: normal normal normal 9px/10px Arial;
+    font: normal normal normal 10px Arial;
 }
