--- a/Visualizacao/Linear/style.css
+++ b/Visualizacao/Linear/style.css
@@ -21,22 +21,8 @@
     align-items: flex-end;
     flex-direction: column-reverse;
 }
-.bloco-linear:not(:last-child) {
-    border-right: 1px solid #79A1E2;
-}
-.bloco-linear.clicado {
-    background-color: #2678C9;
-    border: 0.5px solid white;
-    -webkit-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.5);
-    -moz-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.5);
-    box-shadow: 2px 3px 5px 0px rgba(0,0,0,0.5);
-}
-.bloco-linear span {
-    color: white;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 22px;
-    font-size: 12px;
+.bloco-linear:not(:nth-child(2)) {
+    border-left: 1px solid #79A1E2;
 }
 .grafico-linear-legenda {
     position: relative;
@@ -45,4 +31,28 @@
     font-size: 9px;
     color: #666666;
     font: normal normal normal 10px Arial;
+}
+.grafico-valor {
+    position: absolute;
+    border-radius: 50%;
+    height: 10px;
+    width: 10px;
+    top: 50%;
+}
+.grafico-valor.valor-maximo {
+    width: 6px;
+    height: 10px;
+    border-bottom: 0;
+    border-radius: 60px 0px 0px 60px;
+    left: 97%;
+}
+.grafico-linear-container:before {
+    content: attr(data-titulo-eixo);
+    position: absolute;
+    bottom: -35px;
+    max-width: 100%;
+    width: 100%;
+    text-align: center;
+    font: normal normal bold 10px Arial;
+    color: #4C607A;
 }
