Finalizando gráficos de visualização - (Bolinhas cortando)

--- a/Visualizacao/Linear/style.css
+++ b/Visualizacao/Linear/style.css
@@ -54,7 +54,7 @@
     left: 97.9%;
 }
 .grafico-linear-container:before {
-    content: attr(data-titulo-eixo);
+    content: attr(data-titulo-eixo-y);
     position: absolute;
     bottom: -35px;
     max-width: 100%;
